syntax = "proto3";
package quasarlabs.quasarnode.qbank;

option go_package = "github.com/quasarlabs/quasarnode/x/qbank/types";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "qbank/common.proto";


// Depsoit message object to be stored in the KV store. 
message Deposit {
  string vaultID = 1;
  string depositorAccAddress = 2;
  cosmos.base.v1beta1.Coin coin = 3 [ (gogoproto.nullable) = false ];
  LockupTypes lockupPeriod  = 4;
  repeated string reserved = 5;
}
